Create Api endpoint for types of prison release
